[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modern-workbench"
version = "1.2.0"
description = "A modern terminal-based productivity workbench"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Developer", email = "dev@example.com"},
]
maintainers = [
    {name = "Developer", email = "dev@example.com"},
]
keywords = ["cli", "productivity", "terminal", "async"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
full = [
    "psutil>=5.9.0",
    "pytest>=7.0.0",
    "flake8>=6.0.0",
    "pylint>=2.15.0",
    "black>=22.0.0",
    "isort>=5.12.0",
]

[project.scripts]
workbench = "main:main"

[tool.setuptools]
packages = ["."]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"